--- a/themes/studiodevs/pages/homepage.htm
+++ b/themes/studiodevs/pages/homepage.htm
@@ -1,3 +1,12 @@
 url = "/"
 layout = "default"
 title = "StudioDEVS - aplikacje i striny internetowe"
+==
+
+<div class="container maintenance">
+    <div class="row">
+        <div class="">
+            <h1>test</h1>
+        </div>
+    </div>
+</div>
