--- a/themes/studiodevs/pages/homepage.htm
+++ b/themes/studiodevs/pages/homepage.htm
@@ -3,10 +3,9 @@ layout = "default"
 title = "StudioDEVS - aplikacje i striny internetowe"
 ==
 
-<div class="container maintenance">
+<div class="container">
     <div class="row">
-        <div class="">
-            <h1>test</h1>
-        </div>
+        <img src="{{ 'assets/images/stdevs_background.jpg'| theme  }}" class="object-fill-fit" alt="maintenance-image">
+        <h4>StudioDEVS</h4>
     </div>
 </div>
