add DOM main page

--- a/themes/studiodevs/pages/dom.htm
+++ b/themes/studiodevs/pages/dom.htm
@@ -1,6 +1,8 @@
 url = "/dom"
 layout = "default"
 title = "Digital Media Organizer"
-==
 
+[collectionItemCreate]
+==
 <h1>Digital Media Organizer</h1>
+{% component 'collectionItemCreate' %}
