--- a/themes/studiodevs/pages/dom/games.htm
+++ b/themes/studiodevs/pages/dom/games.htm
@@ -1,8 +1,9 @@
-url = "/dom"
+url = "/dom/games"
 layout = "default"
-title = "Digital Media Organizer"
+title = "DOM - Games"
 
 [collectionItemCreate]
+type = "game"
 ==
-<h1>Digital Media Organizer</h1>
+<h1>Albums</h1>
 {% component 'collectionItemCreate' %}
