--- a/themes/studiodevs/pages/dom/albums.htm
+++ b/themes/studiodevs/pages/dom/albums.htm
@@ -1,9 +1,8 @@
 url = "/dom/albums"
-layout = "default"
+layout = "dom-layout"
 title = "DOM - Albums"
 
 [collectionItemCreate]
 type = "album"
 ==
-<h1>Albums</h1>
 {% component 'collectionItemCreate' %}
