--- a/themes/studiodevs/pages/dom/dom.htm
+++ b/themes/studiodevs/pages/dom/dom.htm
@@ -1,5 +1,5 @@
 url = "/dom"
-layout = "default"
+layout = "dom-layout"
 title = "Digital Media Organizer"
 ==
 <div class="d-flex align-items-center justify-content-center vh-100">
