--- a/themes/studiodevs/pages/dom/album.htm
+++ b/themes/studiodevs/pages/dom/album.htm
@@ -1,13 +1,22 @@
 url = "/dom/album/:slug"
 layout = "dom-layout"
-title = "{{ album.title }}"
+title = "Album"
 
-[albumsList]
+[albumItem]
+albumSlug = "{{ :slug }}"
+==
+<?php
+function onEnd()
+{
+    if (isset($this->albumItem))
+    $this->page->title = $this->albumItem->albumItem->title . ' - ' . $this->albumItem->albumItem->artist ;
+}
+?>
 ==
 <div class="container">
     <div class="row">
         <div class="row my-5">
-            {% component 'albumsList' %}
+            {% component 'albumItem' %}
         </div>
     </div>
 </div>
