--- a/themes/studiodevs/pages/dom/dom.htm
+++ b/themes/studiodevs/pages/dom/dom.htm
@@ -21,7 +21,7 @@ title = "Digital Media Organizer"
                     <div class="card-body">
                         <h5 class="card-title">Games</h5>
                         <p class="card-text">Collect your games</p>
-                        <a href="{{ 'dom/games'|page }}" class="btn btn-primary"><i class="fa-solid fa-square-plus"></i> Add</a>
+                        <a href="{{ 'dom/creategame'|page }}" class="btn btn-primary"><i class="fa-solid fa-square-plus"></i> Add</a>
                     </div>
                 </div>
             </div>
