--- a/themes/studiodevs/pages/homepage.htm
+++ b/themes/studiodevs/pages/homepage.htm
@@ -5,7 +5,6 @@ title = "StudioDEVS - aplikacje i striny internetowe"
 <section id="header" class="section-bg">
     {% partial 'header' %}
 </section>
+<div class="hero">
 
-<section class="footer mt-auto">
-    {% partial 'footer' %}
-</section>
+</div>
