--- a/themes/studiodevs/pages/homepage.htm
+++ b/themes/studiodevs/pages/homepage.htm
@@ -1,10 +1,10 @@
 url = "/"
 layout = "default"
-title = "StudioDEVS - aplikacje i striny internetowe"
+title = "StudioDEVS - aplikacje i strony internetowe"
 ==
 <section id="header" class="section-bg">
     {% partial 'header' %}
 </section>
 <div class="hero">
-
+<h1>Test</h1>
 </div>
