--- a/themes/stdevs/pages/home.htm
+++ b/themes/stdevs/pages/home.htm
@@ -10,7 +10,7 @@ title = "StudioDEVS - aplikacje i strony internetowe"
     {% partial 'home/services' %}
     {% partial 'home/cta' %}
     {% partial 'home/portfolio' %}
-    {% partial 'home/stats' %}
+    {# {% partial 'home/stats' %} #}
     {% partial 'home/testimonials' %}
     {% partial 'home/team' %}
     {% partial 'home/contact' %}
