--- a/themes/stdevs/pages/home.htm
+++ b/themes/stdevs/pages/home.htm
@@ -2,23 +2,35 @@ url = "/"
 layout = "default"
 title = "StudioDEVS - aplikacje i strony internetowe"
 ==
-  <main class="main">
+<main class="main">
     {% partial 'home/hero' %}
     {% partial 'home/about' %}
-    {% partial 'home/clients' %}
+    {# {% partial 'home/clients' %} #}
     {% partial 'home/features' %}
     {% partial 'home/services' %}
     {% partial 'home/cta' %}
     {% partial 'home/portfolio' %}
     {# {% partial 'home/stats' %} #}
-    {% partial 'home/testimonials' %}
-    {% partial 'home/team' %}
+    {# {% partial 'home/testimonials' %} #}
+    {# {% partial 'home/team' %} #}
     {% partial 'home/contact' %}
-  </main>
+</main>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<!-- Scroll Top -->
+<a href="#"
+   id="scroll-top"
+   class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
-  <div id="preloader"></div>
+<!-- Preloader -->
+<div id="preloader"></div>
 
+<script>
+    var map = L.map('map').setView([50.645401, 21.068991], 15);
+    var marker = L.marker([50.645401, 21.068991]).addTo(map);
+    L.tileLayer('https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.{ext}', {
+	minZoom: 0,
+	maxZoom: 20,
+	attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+	ext: 'png'
+    }).addTo(map);
+</script>
