footer amendments, version 1 of new theme can go to prod

--- a/themes/stdevs/pages/home.htm
+++ b/themes/stdevs/pages/home.htm
@@ -13,7 +13,7 @@ title = "StudioDEVS - aplikacje i strony internetowe"
     {# {% partial 'home/stats' %} #}
     {# {% partial 'home/testimonials' %} #}
     {# {% partial 'home/team' %} #}
-    {% partial 'home/contact' %}
+    {# {% partial 'home/contact' %} #}
 </main>
 
 <!-- Scroll Top -->
