add technologies logos

--- a/themes/stdevs/pages/home.htm
+++ b/themes/stdevs/pages/home.htm
@@ -9,11 +9,11 @@ title = "StudioDEVS - aplikacje i strony internetowe"
     {% partial 'home/features' %}
     {% partial 'home/services' %}
     {% partial 'home/cta' %}
-    {% partial 'home/portfolio' %}
+    {# {% partial 'home/portfolio' %} #}
     {# {% partial 'home/stats' %} #}
     {# {% partial 'home/testimonials' %} #}
     {# {% partial 'home/team' %} #}
-    {# {% partial 'home/contact' %} #}
+    {% partial 'home/contact' %}
 </main>
 
 <!-- Scroll Top -->
@@ -25,12 +25,9 @@ title = "StudioDEVS - aplikacje i strony internetowe"
 <div id="preloader"></div>
 
 <script>
-    var map = L.map('map').setView([50.645401, 21.068991], 15);
+    var map = L.map('map').setView([50.645401, 21.068991], 12);
     var marker = L.marker([50.645401, 21.068991]).addTo(map);
-    L.tileLayer('https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.{ext}', {
-	minZoom: 0,
-	maxZoom: 20,
-	attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-	ext: 'png'
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 </script>
