--- a/themes/stdevs/pages/portfolio.htm
+++ b/themes/stdevs/pages/portfolio.htm
@@ -4,7 +4,7 @@ title = "StudioDEVS - portfolio"
 
 [projectsList]
 ==
-<section class="portfolio section py-5 portfolio-bg">
+<section class="portfolio section py-5">
     <div class="container">
         <div class="row text-center mb-4">
             <div class="col">
