--- a/themes/stdevs/pages/home.htm
+++ b/themes/stdevs/pages/home.htm
@@ -13,19 +13,5 @@ title = "StudioDEVS - aplikacje i strony internetowe"
     {# {% partial 'home/stats' %} #}
     {# {% partial 'home/testimonials' %} #}
     {# {% partial 'home/team' %} #}
-    {% partial 'home/contact' %}
+    {# {% partial 'home/contact' %} #}
 </main>
-
-<a href="#"
-   id="scroll-top"
-   class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-<div id="preloader"></div>
-
-<script>
-    var map = L.map('map', { scrollWheelZoom: false }).setView([50.645401, 21.068991], 9);
-    var marker = L.marker([50.645401, 21.068991]).addTo(map);
-    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(map);
-</script>
