--- a/themes/stdevs/pages/homepage.htm
+++ b/themes/stdevs/pages/homepage.htm
@@ -132,7 +132,7 @@ meta_description = "Nowoczesne rozwiązania webowe dla Twojego biznesu"
     
     <div class="max-w-4xl mx-auto px-6 text-center relative z-10">
         <h2 class="text-4xl md:text-5xl font-bold mb-6 text-[#0d1b2a]">Porozmawiajmy o Twoim projekcie</h2>
-        <p class="text-gray-600 text-lg mb-12 max-w-2xl mx-auto">Jesteśmy gotowi pomóc Ci stworzyć coś wyjątkowego.</p>
+        <p class="text-gray-600 text-lg mb-12 max-w-2xl mx-auto">Skontaktuj się z nami, aby omówić Twój pomysł i dowiedzieć się, jak możemy Ci pomóc.</p>
         
         <form method="post" data-request="onSendContact" class="grid gap-6 md:grid-cols-2">
             <!-- Name Input -->
