--- a/themes/stdevs/pages/wiki/article.htm
+++ b/themes/stdevs/pages/wiki/article.htm
@@ -12,6 +12,19 @@ slug = "{{ :slug }}"
 
 {% if article %}
     <h1 class="text-3xl font-bold mb-4">{{ article.title }}</h1>
+    
+    {% if article.tags.count %}
+        <div class="flex flex-wrap gap-2 mb-4">
+            {% for tag in article.tags %}
+                <span 
+                class="inline-flex items-center rounded-md px-2 py-1 text-xs font-medium inset-ring inset-ring-gray-500/10"
+                style="background-color: {{ tag.color }}22; color: {{ tag.color }};">
+                    {{ tag.name }}
+                </span>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <h3 class="text-xl mb-4">Kategoria: <span class="italic">{{ article.category.title }}</span></h3>
 
     <div class="prose prose-lg max-w-none">
