--- a/themes/stdevs/pages/wiki/article.htm
+++ b/themes/stdevs/pages/wiki/article.htm
@@ -1,11 +1,9 @@
-title = "Artykuł"
+title = "Wiki - artykuł"
 url = "/wiki/:slug"
 layout = "wiki"
 
 [articleDetails]
 slug = "{{ :slug }}"
-
-[articlesList]
 ==
 
 {% set article = articleDetails.article %}
