--- a/themes/stdevs/pages/homepage.htm
+++ b/themes/stdevs/pages/homepage.htm
@@ -1,5 +1,5 @@
 url = "/"
-layout = "default"
+layout = "system"
 title = "Strona główna"
 meta_title = "StudioDEVS - Strona główna"
 meta_description = "Nowoczesne rozwiązania webowe dla Twojego biznesu"
@@ -52,6 +52,11 @@ recaptcha_theme = "light"
 recaptcha_type = "image"
 recaptcha_size = "normal"
 emails_date_format = "Y-m-d"
+
+[session]
+security = "all"
+redirect = ""
+checkToken = 0
 ==
 <section class="relative min-h-screen w-full bg-[#0d1b2a] text-white flex items-center">
 
